RESOLVED FIXED279407
[JSC] Fix assertions in `getAsyncFromSyncIteratorInternalField` and `getWrapForValidIteratorInternalField`
https://bugs.webkit.org/show_bug.cgi?id=279407
Summary [JSC] Fix assertions in `getAsyncFromSyncIteratorInternalField` and `getWrapF...
Sosuke Suzuki
Reported 2024-09-09 20:13:37 PDT
This patch fixes assertions in `emit_intrinsic_getAsyncFromSyncIteratorInternalField` and `emit_intrinsic_getWrapForValidIteratorInternalField`
Attachments
Sosuke Suzuki
Comment 1 2024-09-09 20:14:19 PDT
EWS
Comment 2 2024-09-09 21:11:29 PDT
Committed 283387@main (9bf3ebe92c19): <https://commits.webkit.org/283387@main> Reviewed commits have been landed. Closing PR #33362 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-09-09 21:12:15 PDT
Note You need to log in before you can comment on or make changes to this bug.