[JSC] Fix assertions in `getAsyncFromSyncIteratorInternalField` and `getWrapForValidIteratorInternalField` https://bugs.webkit.org/show_bug.cgi?id=279407

Reviewed by Yusuke Suzuki.

This patch fixes assertions in `emit_intrinsic_getAsyncFromSyncIteratorInternalField` and
`emit_intrinsic_getWrapForValidIteratorInternalField`

* Source/JavaScriptCore/bytecompiler/NodesCodegen.cpp:
(JSC::BytecodeIntrinsicNode::emit_intrinsic_getAsyncFromSyncIteratorInternalField):
(JSC::BytecodeIntrinsicNode::emit_intrinsic_getWrapForValidIteratorInternalField):

Canonical link: https://commits.webkit.org/283387@main